@@ -18,7 +18,7 @@
  *
  * The author may be contacted via http://dmalloc.com/
  *
- * $Id: conf.h.in,v 1.91 2003/09/08 14:43:22 gray Exp $
+ * $Id: conf.h.in,v 1.92 2003/09/10 15:28:40 gray Exp $
  */
 
 #ifndef __CONF_H__
@@ -155,6 +155,14 @@
  * getenv call so the environmental processing is delayed.
  */
 #define GETENV_SAFE 0
+
+/*
+ * See whether support exists for the constructor attribute which
+ * allows the library to run code before main() is called.  I know
+ * that later versions of gcc have support for this and maybe other
+ * compilers do as well.
+ */
+#define CONSTRUCTOR_WORKS 0
 
 /*
  * LIBRARY DEFINES:
